--- a/globe_test.html
+++ b/globe_test.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+body{
+    /*background-image: url("dark.jpg");*/
+    /*background-color: black;*/
+    background: url("dark.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 .land {
-    fill: rgb(117, 87, 57);
+    fill:  rgb(0,0,0);
     stroke-opacity: 1;
 }
-
 .countries path {
     stroke: rgb(80, 64, 39);
     stroke-linejoin: round;
@@ -30,7 +38,7 @@
 
 .labels {
     font: 8px sans-serif;
-    fill: black;
+    fill: white;
 }
 
 .noclicks {
@@ -38,17 +46,16 @@
 }
 
 .point{
-    opacity:.6;
+    fill:white;
+    /*opacity:.6;*/
 }
 
 .fog{
     fill: url(#fog);
-    fill-rule: evenodd;
     opacity: 0.85;
 }
 .fogMask{
     fill: black;
-    fill-rule: evenodd;
 }
 div.toolTipSelf {   
     position: absolute;         
@@ -74,9 +81,139 @@ div.toolTipOther {
     border-radius: 8px;         
     pointer-events: none;           
 }
+@font-face { font-family:handwriting; src: url('handwriting-black-draft_DEMO.otf'); } 
+ h1{
+    margin: 0;
+    padding: 0;
+    font-family: handwriting;
+    font-size: 48px;
+    color:#ffffff; 
+    position: absolute;
+    top:30px;
+    left: 30px;
+ }
+ p{
+    margin: 0;
+    padding: 0;
+    font-family: handwriting;
+    font-size: 24px;
+    color:#ffffff; 
+    position: absolute;
+    top: 100px;
+    left: 30px;
+ }
+
+ .ctrl-standard.fx-bubbleDown {
+  position: absolute;
+  top: 30px;
+  left: 1100px;
+  margin: 0;
+  padding: 10px 15px;
+  font-size: 18px;
+  font-family: 'Oswald', sans-serif;
+  color: #f0b81f;
+  border-color: #f0b81f;
+  background-color: black;
+}
+.ctrl-standard.fx-bubbleDown::after {
+  bottom: auto;
+  border-radius: 0 0 $right-val2 $left-val2/0 0 $right-val1 $left-val1;
+  background: #f0b81f;
+}
+.ctrl-standard.fx-bubbleUp {
+  position: absolute;
+  top: 30px;
+  left: 1075px;
+  margin: 0;
+  padding: 10px 12px;
+  font-size: 18px;
+  font-family: 'Oswald', sans-serif;
+  color: #9fa255;
+  border-color: #9fa255;
+  background-color: black;
+}
+.ctrl-standard.fx-bubbleUp::after {
+  top: auto;
+  border-radius: $right-val1 $left-val1 0 0/$right-val2 $left-al2 0 0;
+  background: #9fa255;
+}
+[class*="ctrl-"] {
+  padding: 5px 10px;
+  border-radius: 2px;
+  border: 1px solid #231f20;
+}
+[class*="ctrl-"][class*="fx-"]:hover,
+[class*="ctrl-"][class*="fx-"].active {
+  color: #231f20;
+}
+[class*="ctrl-"][class*="fx-"].is-reversed {
+  color: #231f20;
+}
+
+  [class*="fx-"],
+[class*="fx-"]:hover {
+    -webkit-transition: color 0.5s  ease-in-out;
+    transition: color 0.5s  ease-in-out;
+  }
+  [class*="fx-"]:not(.fx-dyna) {
+    position: relative;
+    z-index: 1;
+    -webkit-transition-delay: 0.2s !important;
+            transition-delay: 0.2s !important;
+    overflow: hidden;
+  }
+  [class*="fx-"]:not(.fx-dyna)::after,
+[class*="fx-"]:not(.fx-dyna)::before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+  }
+  [class*="fx-bubble"]::after {
+    -webkit-transition: height 0.5s ease-in-out;
+    transition: height 0.5s ease-in-out;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 0;
+    width: 100%;
+  }
+  [class*="fx-bubble"]:hover::after,
+[class*="fx-bubble"].active::after {
+    -webkit-transition: height 0.5s ease-in-out;
+    transition: height 0.5s ease-in-out;
+    height: 300%;
+  }
+    [class*="fx-bubble"]:disabled:hover::after {
+        height: 0;
+    }
+ /* .fx-sliderIn::after {
+    -webkit-transition: width 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 0;
+  }
+  .fx-sliderIn:hover::after,
+.fx-sliderIn.active::after {
+    -webkit-transition: width 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out;
+    width: 100%;
+  }
+  :checked + .fx-sliderIn::after,
+.fx-sliderIn.active::after {
+    width: 300%;
+  }*/
 </style>
 
 <body>
+    <h1>FONNGMUN</h1>
+    <p>Round 1 Current Time: 10:00</p>
+    <!-- <button class="ctrl-standard fx-bubbleUp">Tech<br>Tree</button>
+    <button class="ctrl-standard fx-bubbleDown">Log<br>Out</button> -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
@@ -109,6 +246,8 @@ div.toolTipOther {
     var svg = d3.select("body").append("svg")
         .attr("width", width)
         .attr("height", height)
+        .attr("x", 0)
+        .attr("y", 0)
         .on("mousedown", mousedown);
     // Append group for containing hover info.
     var toolTip = d3.select("body").append("div")
