add image & remove redundant includes

--- a/globe_test.html
+++ b/globe_test.html
@@ -231,8 +231,8 @@ th {
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="troopClass.js"></script>
     <script src="https://d3js.org/d3-geo.v1.min.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
     <script>
     d3.select(window)
         .on("mousemove", mousemove)
