--- a/globe_test.html
+++ b/globe_test.html
@@ -269,6 +269,7 @@ th {
         .style("opacity", 0);
     var totalCountryList = ["DPRK", "USA", "Republic of Korea", "USSR", "ROC", "Japan", "Mexico", "India", "Phillipines"];
     var friendOrEnemyCheckbox = d3.select("body").append("div")
+        .attr("id", "friendOrEnemyContainer")
         .style("color", "white")
         .style("position", "absolute")
         .style("bottom", "20px")
@@ -281,6 +282,12 @@ th {
     friendOrEnemyCheckbox.append("input")
         .attr("type", "checkbox")
         .on("change", function(d){
+            var checkedList = [];
+            d3.select("#friendOrEnemyContainer").selectAll("input").each(function(d, i){
+                if (d3.select(this).property("checked") == true) {
+                    checkedList.push(d);
+                }
+            });
             // Send request to change enemyList
             // d is the name of the changed country
             // this.checked == isEnemy
@@ -778,8 +785,8 @@ th {
                     .style("opacity", 0.9);
                 toolTip.html(function(){
                         var str = "#" + d.id + "<br/>"
-                                + "AD: " + d.size * d.unitAD + "<br/>"
-                                + "HP: " + d.size * d.unitHP + "<br/>";
+                                + "AD: " + Math.round(d.size * d.unitAD) + "<br/>"
+                                + "HP: " + Math.round(d.size * d.unitHP) + "<br/>";
                         return str;
                     })
                     .style("left", (d3.event.pageX) + "px")
