update enemy list name

--- a/globe_test.html
+++ b/globe_test.html
@@ -286,7 +286,7 @@ th {
     // Append group for containing hover info.
     var toolTip = d3.select("body").append("div")
         .style("opacity", 0);
-    var totalCountryList = ["DPRK", "USA", "Republic of Korea", "Russia", "ROC", "Japan", "Mexico", "India", "Phillipines", "Vietnam"];
+    var totalCountryList = ["DPRK", "USA", "Korea", "Russia", "ROC", "Japan", "Mexico", "India", "Phillipines", "Vietnam"];
     /*
     var createContainer = d3.select("body").append("div")
         .style("position", "absolute")
