seperate styling to external style sheet

--- a/globe_test.html
+++ b/globe_test.html
@@ -1,240 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-body{
-    /*background-image: url("dark.jpg");*/
-    /*background-color: black;*/
-    background: url("dark.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-.land {
-    fill:  rgb(0,0,0);
-    stroke-opacity: 1;
-}
-.countries path {
-    stroke: rgb(80, 64, 39);
-    stroke-linejoin: round;
-    stroke-width:.5;
-    fill: rgb(117, 87, 57);
-    opacity: .1;
-}
-
-.countries path:hover {
-    fill-opacity:.1;
-    stroke-width:1;
-    opacity: 1;
-}
-
-
-.graticule {
-    fill: none;
-    stroke: black;
-    stroke-width:.5;
-    opacity:.2;
-}
-
-.labels {
-    font: 8px sans-serif;
-    fill: white;
-}
-
-.noclicks {
-    pointer-events:none;
-}
-
-.point{
-    fill:white;
-    /*opacity:.6;*/
-}
-
-.fog{
-    fill: url(#fog);
-    opacity: 0.85;
-}
-.fogMask{
-    fill: black;
-}
-.resource{
-
-}
-div.toolTipSelf {   
-    position: absolute;         
-    text-align: left;         
-    width: 60px;                    
-    height: 42px; /*14 multiply by 行數 */           
-    padding: 2px;               
-    font: 12px sans-serif;      
-    background: lightsteelblue;
-    border: 0px;        
-    border-radius: 8px;         
-    pointer-events: none;           
-}
-div.toolTipOther {   
-    position: absolute;         
-    text-align: left;         
-    width: 60px;                    
-    height: 56px; /*14 multiply by 行數 */           
-    padding: 2px;               
-    font: 12px sans-serif;      
-    background: magenta; 
-    border: 0px;        
-    border-radius: 8px;         
-    pointer-events: none;           
-}
-@font-face { 
-    font-family:Oswald; 
-    src: url('Oswald-Regular.ttf'); 
-}
-@font-face { font-family:handwriting; src: url('handwriting-black-draft_DEMO.otf'); } 
- h1{
-    margin: 0;
-    padding: 0;
-    font-family: handwriting;
-    font-size: 48px;
-    color:#ffffff; 
-    position: absolute;
-    top:30px;
-    left: 30px;
- }
- p{
-    margin: 0;
-    padding: 0;
-    font-family: handwriting;
-    font-size: 24px;
-    color:#ffffff; 
-    position: absolute;
-    top: 100px;
-    left: 30px;
- }
-.logout{
-    position: absolute;
-    top: 30px;
-    right: 20px;
-    background-color: #ffffff;
- }
-.ctrl-standard.fx-bubbleDown {
-  padding: 10px 18px;
-  font-size: 20px;
-  font-family: Oswald;
-  line-height: 24px;
-  letter-spacing: 0;
-  color: #f0b81f;
-  border-color: #f0b81f;
-  background-color: black;
-  width: 100%;
-  height: 100%;
-  /*position: fixed;
-  top: 30px;
-  left: 1100px;
-  top: 0px;
-  margin: 0;*/
-}
-
-.ctrl-standard.fx-bubbleDown::after {
-  bottom: auto;
-  border-radius: 0 0 $right-val2 $left-val2/0 0 $right-val1 $left-val1;
-  background: #f0b81f;
-}
-
-.techtree{
-    position: absolute;
-    top: 30px;
-    right: 100px;
-    background-color: #ffffff;
-}
-
-.ctrl-standard.fx-bubbleUp {
-  padding: 10px 15px;
-  font-size: 20px;
-  font-family: Oswald;
-  line-height: 24px;
-  letter-spacing: 0;
-  color: #9fa255;
-  border-color: #9fa255;
-  background-color: black; 
-  /*position: fixed;
-  top: 30px;
-  left: 1075px;
-  top: 0px;
-  margin: 0;*/
-}
-
-.ctrl-standard.fx-bubbleUp::after {
-  top: auto;
-  border-radius: $right-val1 $left-val1 0 0/$right-val2 $left-al2 0 0;
-  background: #9fa255;
-}
-
-[class*="ctrl-"]{
-  padding: 5px 10px;
-  border-radius: 2px;
-  border: 1px solid #231f20;
-}
-
-[class*="ctrl-"][class*="fx-"]:hover,
-[class*="ctrl-"][class*="fx-"].active {
-  color: #231f20;
-}
-
-[class*="fx-"],
-[class*="fx-"]:hover {
-    -webkit-transition: color 0.5s  ease-in-out;
-    transition: color 0.5s  ease-in-out;
-}
-
-[class*="fx-"]:not(.fx-dyna) {
-    position: relative;
-    z-index: 1;
-    -webkit-transition-delay: 0.2s !important;
-            transition-delay: 0.2s !important;
-    overflow: hidden;
-}
-
-[class*="fx-"]:not(.fx-dyna)::after,
-[class*="fx-"]:not(.fx-dyna)::before {
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: -1;
-}
-  
-[class*="fx-bubble"]::after {
-    -webkit-transition: height 0.5s ease-in-out;
-    transition: height 0.5s ease-in-out;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 0;
-    width: 100%;
-}
-
-[class*="fx-bubble"]:hover::after,
-[class*="fx-bubble"].active::after {
-    -webkit-transition: height 0.5s ease-in-out;
-    transition: height 0.5s ease-in-out;
-    height: 300%;
-}
-    
-[class*="fx-bubble"]:disabled:hover::after {
-    height: 0;
-}
-table {
-    border-collapse: collapse;
-    position: absolute;
-}
-
-table, th, td {
-    border: 1px solid white;
-}
-th {
-    color: white;
-}
-</style>
-
+<head>
+    <link rel="stylesheet" type="text/css" href="styling.css">
+</head>
 <body>
     <h1>FONNGMUN</h1>
     <p>Round 1 Current Time: 10:00</p>
